<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_80dp"
        android:layout_marginHorizontal="@dimen/_8dp"
        android:layout_marginVertical="@dimen/_8dp"
        app:layout_constraintEnd_toStartOf="@id/tv_title"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_24dp"
                android:layout_gravity="bottom"
                android:background="@color/black_back"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist"
                android:textSize="@dimen/_12sp"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_54dp"
                android:layout_marginBottom="@dimen/_6dp"
                />


        </FrameLayout>




    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/card_view"
        app:layout_constraintTop_toTopOf="parent"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_video_count"
        android:maxLines="2"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/tv_video_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sp"
        android:text="@string/video_series"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>